hphp/hack/test/pocket_universes/typing/expr3.bad.php.exp
File "expr3.bad.php", line 16, characters 25-26:
Invalid argument (Typing[4110])
File "expr3.bad.php", line 16, characters 12-17:
Expected this:@F
File "expr3.bad.php", line 15, characters 31-37:
But got this:@E
